Introduced var, added timing, reduced scope where possible.